--- a/preparation_reseau.ipynb
+++ b/preparation_reseau.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "ville = \"Vallorbe, District du Jura-Nord vaudois, Vaud, 1337, Suisse\"\n",
+    "ville = \"Vaud, Suisse\"\n",
     "\n",
     "print(\"Chargement des graphes...\")\n",
     "G_drive = ox.graph.graph_from_place(ville, network_type=\"drive\")\n",
