--- a/preparation_reseau.ipynb
+++ b/preparation_reseau.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d537f5b4",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "ville = \"Vaud, Suisse\"\n",
+    "ville = \"Vaud, Suisse\" # Remplacez par la ville souhaitée, exemple : \"Vallorbe, District du Jura-Nord vaudois, Vaud, 1337, Suisse\" - noms exacts de la documentation OSM\n",
     "\n",
     "print(\"Chargement des graphes...\")\n",
     "G_drive = ox.graph.graph_from_place(ville, network_type=\"drive\")\n",
@@ -64,13 +64,12 @@
     "G_walk_proj = ox.routing.add_edge_travel_times(G_walk)\n",
     "\n",
     "print(\"Fusion des graphes...\")\n",
-    "G_combined = nx.compose(G_drive, G_walk_proj)\n",
-    "\n"
+    "G_combined = nx.compose(G_drive, G_walk_proj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c23a63fa-a8a5-4f11-ad52-fab409ecb354",
    "metadata": {},
    "outputs": [
@@ -86,7 +85,7 @@
    "source": [
     "# Liste des types de routes à CONSERVER\n",
     "print(\"Supression des types de 'highway' qui ne sont pas dans cette liste; unclassified, track, primary, residential, secondary, service, tertiary.\")\n",
-    "types_to_keep = [\"unclassified\",\"track\", \"primary\", \"residential\", \"secondary\", \"service\", \"tertiary\"] \n",
+    "types_to_keep = [\"unclassified\",\"track\", \"primary\", \"residential\", \"secondary\", \"service\", \"services\", \"tertiary\", \"motorway\", \"motorway_link\", \"primary_link\", \"secondary_link\", \"tertiary_link\", \"trunk\", \"trunk_link\"] \n",
     "\n",
     "# Fonction pour vérifier si une arête doit être conservée\n",
     "def should_keep(highway_value):\n",
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3aac0d9a",
    "metadata": {},
    "outputs": [
@@ -156,7 +155,7 @@
     "gdf_nodes, gdf_edges = ox.convert.graph_to_gdfs(G_combined, nodes=True, edges=True)\n",
     "print(f\"   ➤ {len(gdf_nodes)} nœuds et {len(gdf_edges)} arêtes extraits.\")\n",
     "\n",
-    "nom_fichier = \"Vaud\"\n",
+    "nom_fichier = \"Vaud\" # Nom du fichier de sortie, modifiez ici et dans 'calcultateur_itineraire.py' si nécessaire\n",
     "print(\"6. Export du graphe en Geopackage...\")\n",
     "ox.io.save_graph_geopackage(G_combined, filepath=nom_fichier + \".gpkg\")\n",
     "print(\"   ➤ Fichier .gpkg enregistré.\")\n",
